2002-02-12  Nick Clifton  <nickc@cambridge.redhat.com>

	* binutils-all/readelf.ss-mips: Do not expect an explicit
        ordering of the sections.

2002-02-10  Nick Clifton  <nickc@cambridge.redhat.com>

	* binutils-all/objdump.exp: Add 'xscale' to the list of expected
	CPUs.

2002-01-14  Nick Clifton  <nickc@cambridge.redhat.com>

	* binutils-all/objcopy.exp: Expect xscale-coff to fail simple
	objcopy test for the same reason as arm-coff.

2001-11-29  H.J. Lu <hjl@gnu.org>

	* binutils-all/objcopy.exp (strip_test): Add strip on archive.

2001-11-15  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp: Allow '? main', to suit powerpc64.

2001-11-14  Geoffrey Keating  <geoffk@redhat.com>

	* binutils-all/readelf.exp: powerpc-*-eabi* is an ELF target.

2001-10-03  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* binutils-all/readelf.exp: Exclude mips*-*-elf* from 'readelf -wi'
	test.

Tue Sep  4 20:25:41 2001  Jeffrey A Law  (law@cygnus.com)

	* binutils/all/readelf.exp: Expect readelf -wi to
	fail for the H8 series.

2001-08-27  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/readelf.s-64: Adjust offsets for powerpc64.  Don't
	use constructs like [45][08] when all combinations are not valid.
	Instead use (48|50) to explicitly state which values are correct.

2001-08-21  H.J. Lu  <hjl@gnu.org>

	* binutils-all/readelf.r: Updated for the readelf change.

	* binutils-all/readelf.r-64: New for the readelf change.

2001-07-27  H.J. Lu  <hjl@gnu.org>

	* binutils-all/windres/windres.exp: Don't set xfail for
	bmpalign (compare) on none-ix86/pe targets.

2001-07-24  H.J. Lu  <hjl@gnu.org>

	* binutils-all/windres/windres.exp: Set xfail on none-ix86/pe
	targets.

2001-07-18  DJ Delorie  <dj@redhat.com>

	* config/default.exp (WINDRES): Add.
	* binutils-all/windres/windres.exp: New.
	* binutils-all/windres/README: New.
	* binutils-all/windres/bmp1.bmp: New.
	* binutils-all/windres/bmpalign.rc: New.
	* binutils-all/windres/bmpalign.rsd: New.